--- a/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
+++ b/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
@@ -1,5 +1,5 @@
 <combo-chart-component
-  [view]="view"
+  [view]="receivedSize"
   [scheme]="comboBarScheme"
   [noBarWhenZero]="noBarWhenZero"
   [colorSchemeLine]="lineChartScheme"
