--- a/src/app/shared/line-chart/line-chart.component.html
+++ b/src/app/shared/line-chart/line-chart.component.html
@@ -1,5 +1,5 @@
 <ngx-charts-line-chart
-  [view]="view"
+  [view]="receivedSize"
   [scheme]="colorScheme"
   [legend]="legend"
   [showXAxisLabel]="showXAxisLabel"
