--- a/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/src/app/shared/grouped-bar-chart/grouped-bar-chart.component.html
@@ -1,5 +1,5 @@
 <ngx-charts-bar-vertical-2d
-  [view]="view"
+  [view]="receivedSize"
   [scheme]="colorScheme"
   [results]="receivedData"
   [gradient]="gradient"
