--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+    display: none;
+  }
+  
