--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.css
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.css
@@ -125,3 +125,12 @@ table{
     border-bottom:1px solid #cbcbcb;
     background-color: white;
 }
+.triangle-down-in-table {
+	width: 0;
+	height: 0;
+	border-left: 3px solid transparent;
+	border-right: 3px solid transparent;
+    border-top: 6px solid #070707;
+    margin-top: 0.4rem;
+    margin-right: 0.2rem;
+}
