--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -70,11 +70,11 @@
                     <h5>Tăng trưởng</h5>
                     <h5 style="color:#f58730"  *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow>hrmReportService.getsumwithcategoriespast">
                         <div class="triangle-up"></div>
-                        {{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%
+                        {{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast) | percent}}
                     </h5>
                     <h5 style="color:#f58730"  *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriespast>hrmReportService.getsumwithcategoriesnow">
                         <div class="triangle-down"></div>
-                        {{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%
+                        {{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast) | percent}}
                     </h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithcategoriespast==0&&hrmReportService.getsumwithcategoriesnow!==0">100%</h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithcategoriespast==hrmReportService.getsumwithcategoriesnow">0%</h5>
@@ -104,11 +104,11 @@
                     <h5>Tăng trưởng</h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow>hrmReportService.getsumwithmonthpast">
                         <div class="triangle-up"></div>
-                        {{(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%
+                        {{(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)/(hrmReportService.getsumwithmonthpast)*100 | percent}}
                     </h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthpast>hrmReportService.getsumwithmonthnow">
                         <div class="triangle-down"></div>
-                        {{(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%
+                        {{(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)/(hrmReportService.getsumwithmonthpast)*100 | percent}}
                     </h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithmonthpast==0&&hrmReportService.getsumwithmonthnow!==0">100%</h5>
                     <h5 style="color:#f58730" *ngIf="hrmReportService.getsumwithmonthpast==hrmReportService.getsumwithmonthnow">0%</h5>
@@ -140,11 +140,11 @@
                     <div class="w-25">
                         <h5 class="line1" style="color:#f58730" *ngIf="hrmReportService.getcountedhrminmonthpast!==0&&hrmReportService.getcountedhrminmonthnow>hrmReportService.getcountedhrminmonthpast">
                             <div class="triangle-up"></div>
-                            {{hrmReportService.handlePercent(hrmReportService.getcountedhrminmonthpast,hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast)}}%
+                            {{(hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast)/hrmReportService.getcountedhrminmonthpast|percent}}
                         </h5>
                         <h5 class="line1" style="color:#f58730" *ngIf="hrmReportService.getcountedhrminmonthnow!==0&&hrmReportService.getcountedhrminmonthpast>hrmReportService.getcountedhrminmonthnow">
                             <div class="triangle-down"></div>
-                            {{hrmReportService.handlePercent(hrmReportService.getcountedhrminmonthpast,hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow)}}%
+                            {{(hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow)/hrmReportService.getcountedhrminmonthpast|percent}}
                         </h5>
                         <h5 class="line1" style="color:#f58730" *ngIf="hrmReportService.getcountedhrminmonthpast==0&&hrmReportService.getcountedhrminmonthnow!==0">
                         100%
@@ -201,12 +201,12 @@
     
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 block2">
         <div class="title">{{title}}</div>
-        <div class="flex-wrap flex ">
+        <div class="flex-wrap flex">
             <app-grouped-bar-chart [receivedData]="getsumwithcategorieseachmonth" [receivedSize]="sizeChart8"></app-grouped-bar-chart>
             <table class="table">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col" >Tháng</th>
+                    <th scope="col" >T</th>
                     <th scope="col">{{hrmReportService.nam}}</th>
                     <th scope="col">{{hrmReportService.nam-1}}</th>
                   </tr>
@@ -214,11 +214,11 @@
                 <tbody>
                   <tr *ngFor="let item of getsumwithcategorieseachmonth">
                     <th scope="row">{{item.name}}</th>
-                    <td>{{item.series[0].value}}</td>
-                    <td>{{item.series[1].value}}</td>
+                    <td>{{item.series[0].value| currency:'VND'}}</td>
+                    <td>{{item.series[1].value| currency:'VND'}}</td>
                   </tr>
                 </tbody>
-            </table>
+            </table>   
         </div>
        
     </div>
@@ -230,14 +230,14 @@
             <table class="table">
                 <thead class="thead-light">
                 <tr>
-                    <th scope="col">Tháng</th>
+                    <th scope="col">T</th>
                     <th scope="col">Chênh lệch</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr *ngFor="let item of getsumwithcategorieseachdifferent[0].series">
                     <th scope="row">{{item.name}}</th>
-                    <td>{{item.value}}</td>
+                    <td class="flex flex-wrap"><div *ngIf="0>item.value" class="triangle-down-in-table"></div>{{item.value| currency:'VND'|positivePipe}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -258,7 +258,7 @@
             <table class="table">
                 <thead class="thead-light">
                 <tr>
-                    <th scope="col">Tháng</th>
+                    <th scope="col">T</th>
                     <th scope="col">{{hrmReportService.nam}}</th>
                     <th scope="col">{{hrmReportService.nam-1}}</th>
                 </tr>
@@ -266,8 +266,8 @@
                 <tbody>
                 <tr *ngFor="let item of getaverageeachmonthnow;let i = index">
                     <th scope="row">{{item.name}}</th>
-                    <td>{{item.value}}</td>
-                    <td>{{getaverageeachmonthpast[0].series[i].value}}</td>
+                    <td>{{item.value| currency:'VND'}}</td>
+                    <td>{{getaverageeachmonthpast[0].series[i].value| currency:'VND'}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -278,17 +278,17 @@
         <div class="title">Tăng trưởng so với tháng trước năm {{hrmReportService.nam}}</div>
         <div class="flex-wrap flex ">
             <app-line-chart [receivedData]="getdifferenteachmonth" [receivedSize]="sizeChart12"></app-line-chart>
-            <table class="table" style="width:min-content;">
+            <table class="table">
                 <thead class="thead-light">
                 <tr>
-                    <th scope="col">Tháng</th>
+                    <th scope="col">T</th>
                     <th scope="col">Chênh lệch</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr *ngFor="let item of getdifferenteachmonth[0].series">
                     <th scope="row">{{item.name}}</th>
-                    <td>{{item.value}}</td>
+                    <td class="flex flex-wrap"><div *ngIf="0>item.value" class="triangle-down-in-table"></div>{{item.value| positivePipe| currency:'VND'}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -302,14 +302,14 @@
             <table class="table">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">Tháng</th>
-                    <th scope="col">% Tăng trưởng</th>
+                    <th scope="col">T</th>
+                    <th scope="col">Tăng trưởng</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr *ngFor="let item of getdifferentpercenteachmonth[0].series">
                     <th scope="row">{{item.name}}</th>
-                    <td>{{item.value}}</td>
+                    <td class="flex flex-wrap"><div *ngIf="0>item.value" class="triangle-down-in-table"></div>{{item.value|positivePipe}}%</td>
                   </tr>
                 </tbody>
             </table>
@@ -345,7 +345,7 @@
         <div class="title">Số lượng nhân sự tăng</div>
         <div class="flex flex-wrap">
             <app-combo-line-bar-chart [receivedData]="getallnewhreachmonthnow" [receivedData2]="getallnewhreachmonthpast" [receivedSize]="sizeChart15"></app-combo-line-bar-chart>
-            <table class="table" style="width: min-content;">
+            <table class="table">
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">T</th>
