--- a/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/shared/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -11,5 +11,7 @@
 [showYAxisLabel]="showYAxisLabel"
 [xAxisLabel]="xAxisLabel"
 [yAxisLabel]="yAxisLabel"
+[showDataLabel]="showDataLabel"
+[roundDomains]="roundDomains"
 (select)="onSelect($event)">
 </ngx-charts-bar-horizontal>
