--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
                         </div>
                         <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)" class="tc" style="margin-top:-0.8rem">
                             <input id=userName type="text" formControlName="userName" class="" required>
-                            <input id=password type="text" formControlName="password" class="" required>
+                            <input id=password type="password" formControlName="password" class="" required>
                             <button type="submit"  [disabled]="!loginForm.valid" class="btn btn-primary">Đăng nhập</button>   
                         </form>
                         <div class="flex mt3">
